@@ -7,7 +7,6 @@
 <batteries_nothreads.a>: precious
 <fix_camlp4_print.*>:camlp4orf,use_camlp4_full
 "optcomp": include
-<generate_mli.*>: pkg_camlp4.lib
+<generate_mli.*>: pkg_camlp4.lib,use_str
 <odoc_extract_mli.*>:camlp4oof
 <extractdist.*>:camlp4oof,use_camlp4_full
-
